# BCP-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
WASM-example/: README.md  index.js  package.json
src/: bench.rs  lib.rs  test.rs  wasm.rs
