[package]
name = "bcp-rs"
version = "0.1.0"
edition = "2021"

[[test]]
name = "wright"
path = "src/test.rs"
harness = false

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-primes = "0.3"
num-modular = { version = "0.5", features = ["num-bigint"] }
rand = "0.8"

[dev-dependencies]
wright = { git = "https://github.com/CoBrooks/wright" }
