[package]
name = "bcp-rs"
version = "0.1.0"
edition = "2021"

[[test]]
name = "wright"
path = "src/test.rs"
harness = false

[[bench]]
name = "benchmark"
path = "src/bench.rs"
harness = false

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
num-prime = "0.4"
num-modular = { version = "0.5", features = ["num-bigint"] }
rand = "0.8"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
wright = { git = "https://github.com/CoBrooks/wright" }
bencher = "0.1"
